Filename and grammar fixes

--- a/en/campaign/08.03 - Adding and Editing an Event to the Campaign.md
+++ b/en/campaign/08.03 - Adding and Editing an Event to the Campaign.md
@@ -35,7 +35,7 @@ To edit when a message or flow will be sent, alter the flow, or change the actio
 
 3. Click on the box "Edit" on the top right of the page.
 
-4. Using the drop-down menu on the event actualization dialog box that you can change:
+4. Using the drop-down menu on the event update dialog box that you can change:
 
 Starting a flow to send a message;
 The flow is started;
