--- a/en/channels/02.05 - Using a Android CellPhone as a Channel.md
+++ b/en/channels/02.05 - Using a Android CellPhone as a Channel.md
@@ -10,7 +10,7 @@ If you don't already have one, you'll want to acquire a SIM card from your local
 
 **3. Install the mobile application**
 
-You can download the free Android app here. Once the app is installed, it will give you a 9-digit claim code that you then enter on the website. That's all there is to it. From then on, that phone will handle sending and receiving messages for your account.
+You can download the free Android app [here](https://new.push.al). Once the app is installed, it will give you a 9-digit claim code that you then enter on the website. That's all there is to it. From then on, that phone will handle sending and receiving messages for your account.
 
 **4. Give the phone a good home**
 
