--- a/en/contacts/04.02 - Adding a Contact.md
+++ b/en/contacts/04.02 - Adding a Contact.md
@@ -14,4 +14,4 @@
 
 4. The new contact will appear on the top of the contacts.
 
-**All numbers add to ilhapush should have the country code, using the E164 format.*
+**All numbers add to the platform should have the country code, using the E164 format.*
