--- a/en/contacts/04.08 - Configuring the Contact Language.md
+++ b/en/contacts/04.08 - Configuring the Contact Language.md
@@ -1,7 +1,7 @@
 The platform allows defining the language preferences for your contacts. When defined, these are the languages that your contacts will receive the messages.
 
 **To define the contact language preferences through the "Contacts" guide:**
-1. Go to the "contacts" guide, after that, click on the contact that you want to actualize
+1. Go to the "contacts" guide, after that, click on the contact that you want to update.
 
 ![](/img/contact/contact.png)
 
@@ -9,7 +9,7 @@ The platform allows defining the language preferences for your contacts. When de
 
 ![](/img/contact/edit.png)
 
-3. The "Actualize Contact" box will appear. Click on the "Language" menu to select the primary and secondary languages, click on  "Save Changes"
+3. The "Update Contact" box will appear. Click on the "Language" menu to select the primary and secondary languages, click on  "Save Changes"
 
 ![](/img/contact/update_language.png)
 
