--- a/en/facebook/12.01 - Facebook Channel.md
+++ b/en/facebook/12.01 - Facebook Channel.md
@@ -1,10 +1,10 @@
 To add the bot to Facebook chat it is necessary first to understand the tools involved in establishing communication:
 
-Creating a Facebook Page – Such a profile, a page is linked to an establishment, entity, body, or service. This page is where users will have access to chatbot through Facebook Messenger. Posts, comments, posts sharing or markings will not be interpreted by the chatbot.
+**Creating a Facebook Page** – Such a profile, a page is linked to an establishment, entity, body, or service. This page is where users will have access to chatbot through Facebook Messenger. Posts, comments, posts sharing or markings will not be interpreted by the chatbot.
 
-Creating an App – On the website for Facebook developers should be created an application that will act as a messaging gateway. During development/testing, the app gives access to chatbot only to its administrators, to make the app public access it needs to go through an evaluation process and fulfill some Facebook requirements.
+**Creating an App** – On the website for Facebook developers should be created an application that will act as a messaging gateway. During development/testing, the app gives access to chatbot only to its administrators, to make the app public access it needs to go through an evaluation process and fulfill some Facebook requirements.
 
-Link app with chat – You need to configure app-supplied tokens as well as webhooks with callback URLs.
+**Link app with chat** – You need to configure app-supplied tokens as well as webhooks with callback URLs.
 
 1. Creating the page 
 
@@ -36,7 +36,7 @@ Select the Basic option under Settings, fill out the form and save your changes.
 
 ![](/img/facebook/fb5.jpeg)
 
-Generate the Token
+## Generate the Token
 Now we will generate the token to configure the channel in the platform. To do this, select Settings inside the Messenger section and choose the page that will be linked to this app. After selecting the page you will be asked permission of the app to the page, just confirm.
 
 Important
