--- a/en/flows/06.10 - Adding and Updating the Contact Fields.md
+++ b/en/flows/06.10 - Adding and Updating the Contact Fields.md
@@ -1,6 +1,6 @@
 When the contact field is created, the default value is null, at least the field was imported from a pre-existing value. To alter a newly created field value, you can update it using this action or editing a contact field value using the contact’s guide. For example, when a new phone number sends a message to a channel connected to your account, a new contact will be created with a null value in the name field and null values for each added contact’s field. The new contact will be identifiable by your phone number until that other values are updated.
 
-Use a contact actualization action to:
+Use a contact update action to:
 
 Create a new contact field and update its value for each contact on this action;
 
@@ -33,7 +33,7 @@ The contact fields can be updated with a fixed value, expressions or variables:
 
 ![](/img/flow/flow29.png)
 
-## The Existing Contact Field Actualization
+## The Existing Contact Field update
 
 If you want to add the contact to an existing contact field, you just need to click on the arrow and see the available contact fields on the drop-down menu;
 
