--- a/en/flows/06.15 - Start Someone Else in Flow.md
+++ b/en/flows/06.15 - Start Someone Else in Flow.md
@@ -5,7 +5,7 @@ Use Start Someone Else in a Flow to put a contact or a group into a flow when a 
 This action can be used to create a totally new contact. On the example below the contact in the "patient" flow is being invited to present the patient’s name and phone number. After the information was collected we used the "Start Someone Else in a flow" action to unleash the new flow "Create a New Patient". 
 A new contact with the standard field (name and phone number) will be created in this new flow. Name and phone number are going to be filled using an Update the contact action using the results collected in the previous flow (patient)
 
-In summary, the first flow collects the patient information, while the second flow actualizes a contact profile for this patient.
+In summary, the first flow collects the patient information, while the second flow updates a contact profile for this patient.
 
 ![](/img/flow/flow45.png)
 
