--- a/en/surveyor/13.01 - Introduction to Surveyor.md
+++ b/en/surveyor/13.01 - Introduction to Surveyor.md
@@ -15,6 +15,6 @@ Surveyor Flows differ from SMS or voice that is destined to be used in the Surve
   
 Notice that in "Create a contact" we have two options to create contacts:
 
-**1-For each run:** by default, the new Surveyor flow will create a new contact with each execution concluded. You can use the action Actualize Contact to save each word presented in the contact profile. The use case intention is used to allow enumerators, project managers, and M&A officials to collect information about a person, place, things or ideas and save the results as a contact.
+**1-For each run:** by default, the new Surveyor flow will create a new contact with each execution concluded. You can use the action Update Contact to save each word presented in the contact profile. The use case intention is used to allow enumerators, project managers, and M&A officials to collect information about a person, place, things or ideas and save the results as a contact.
 
 **2-By Login:** Alternatively, the Surveyor flow can be executed only as SMS flows by contacts that you download on the Surveyor app. As a Twitter or Telegram channel, this provides a free communication channel to your contacts. To use Surveyor, in this way, you should unblock the account functions and attribute Surveyor privilege to the contact e-mail addresses that are using the Surveyor. After that, just alter the flow to create a contact for each login. Each contact working as a Surveyor will be able to download and execute the flow, to do this, the contact just needs to register the email address and the password.
