Grammar and images fixes

--- a/en/contacts/04.01 - Contact Introduction.md
+++ b/en/contacts/04.01 - Contact Introduction.md
@@ -13,7 +13,7 @@ A contact is the final user that interacted or will interact with the platform. 
 - Visualize the message background of each contact and see if it has some scheduled to send messages.
 - Add, edit and prioritize the addresses.
 
-**Contact Fields:** For each contact is attributed attributes that are called contact fields. They have values with your name, phone number and any individual information that you want to include. The contact fields are divided into two categories, standard and personalized fields, and they can get three types of value: text, numerical or date and time.
+**Contact Fields:** For each contact is attributed attributes that are called contact fields. They have values with your name, phone number and any individual information that you want to include. The contact fields are divided into two categories, standard and custom fields, and they can get three types of value: text, numerical or date and time.
 
 **Default Fields:** Includes the name, contact and group addresses.
 
