--- a/en/contacts/04.04 - Adding New Fields.md
+++ b/en/contacts/04.04 - Adding New Fields.md
@@ -1,4 +1,4 @@
-All contacts can be attributed to some attributes called contact fields, they have values with their names, phone numbers and any other individual information that you want to include. The contacts field are split into two types, default fields, and personalized fields, and they can support 3 types of values: text, numbers or date and time. When a contact field is created, the default value is null, unless the field was imported from a spreadsheet with a pre-existing value or updated when a contact requires an update action on the flow. The contacts fields can be added to the contacts using the method described below or interaction with a flow using a contact update. 
+All contacts can be attributed to some attributes called contact fields, they have values with their names, phone numbers and any other individual information that you want to include. The contacts field are split into two types, default fields, and custom fields, and they can support 3 types of values: text, numbers or date and time. When a contact field is created, the default value is null, unless the field was imported from a spreadsheet with a pre-existing value or updated when a contact requires an update action on the flow. The contacts fields can be added to the contacts using the method described below or interaction with a flow using a contact update. 
 
 #### To add a new field you should:
 
