--- a/en/contacts/04.06 - Editing the Fields Value.md
+++ b/en/contacts/04.06 - Editing the Fields Value.md
@@ -1,4 +1,5 @@
-Editing Standard Fields
+## Editing Standard Fields
+
 Standard fields can be added and edited manually through the "update" button located on the profile page. Default fields contain names, groups and contact addresses. To access "update Contact",
 
 1. Go to a contact page;
@@ -15,14 +16,14 @@ Standard fields can be added and edited manually through the "update" button loc
 
 The "Add Connection" menu provides an entry for you to add all kinds of connections. Just a call can be added by time. The arrows pointing up on the right of the address field are the ones that you will use to prioritize some addresses. The contact recognizes the first address with priority, this is an important indicator for the sent messages. Let's imagine that your account has a phone number, Twitter and Telegram connected and you want to send a message to 3 contacts, each address with a different priority. The channel will send the message according to the correspondent priority.
 
-You can alter the contacts field value going to the contact's page, or adding an update through the flow. When the new address sends a message to a channel connected with your account, a new contact will be created with null values for the pre-existing and personalized fields. The new contact will be identifiable by your address until the new fields values are updated.
+You can alter the contacts field value going to the contact's page, or adding an update through the flow. When the new address sends a message to a channel connected with your account, a new contact will be created with null values for the pre-existing and custom fields. The new contact will be identifiable by your address until the new fields values are updated.
 
 ## Editing Custom Fields
-The personalized fields can be created through the "Manage Fields" button and can be edited through the personalized fields dialog box localized on the contact profile page. To access the personalized dialog box, go to the contact dialog box and select the "Custom Fields" on the configuration menu.
+The custom fields can be created through the "Manage Fields" button and can be edited through the custom fields dialog box localized on the contact profile page. To access the custom dialog box, go to the contact dialog box and select the "Custom Fields" on the configuration menu.
 
 ![](/img/contact/Edit_Fields.png)
 
-The personalized fields added to your account will be listed on the dialog box, where the individuals' values appear. To edit these values, just replace the previous value for the value wanted and click on "Ok".
+The custom fields added to your account will be listed on the dialog box, where the individuals' values appear. To edit these values, just replace the previous value for the value wanted and click on "Ok".
 
 ![](/img/contact/editing_custon_fields.png)
 
