--- a/en/telegram/10.01 - Introduction to Telegram Channel.md
+++ b/en/telegram/10.01 - Introduction to Telegram Channel.md
@@ -17,7 +17,7 @@ Your Telegram channel will be represented by a bot. Telegram Bots are special ac
 2. The usernames always finish in 'bot' (for example,@YouNameBot, @YorName_bot).
 3. Act as a simple interface for a Telegram API.
 
-The telegram bots allow creating personalized tools that provide warnings, forecasts, translations, and different services.
+The telegram bots allow creating custom tools that provide warnings, forecasts, translations, and different services.
 
 #### Broadcast Message
 
