--- a/en/contacts/04.09 - Importing Contacts.md
+++ b/en/contacts/04.09 - Importing Contacts.md
@@ -5,11 +5,11 @@ The contacts importation allows you to add an entire group to the platform using
 - The name's column contains the first name and the surname of each contact.
 - (Conditional) A UUID column contains the identification universally exclusive for each contact that you want to import. This column can replace the name column, it is necessary to import a spreadsheet with the intention to add a new address or kind of address.
 - (Optional) The language column represents the main language containing ISO 639-2 standard nomenclature to classify the included languages.
-- (Optional) Any added column number corresponds to a personalized attribute* (contacts field) containing the contacts value fields. Observe the column names are limited to 36 characters and don't support special characters.
+- (Optional) Any added column number corresponds to a custom attribute* (contacts field) containing the contacts value fields. Observe the column names are limited to 36 characters and don't support special characters.
 
-*Observe that, when you want to import a date value to the platform but without a time value, it will attribute a 00:00 time value. Although to add manually just a data value to each contact field, the platform will replace the correspondent time value with the time moment that you updated the field.*
+*Notice that, when you want to import a date value to the platform but without a time value, it will attribute a 00:00 time value. Although to add manually just a data value to each contact field, the platform will replace the correspondent time value with the time moment that you updated the field.*
 
-![](/img/contact/import_contact.png)
+![](/img/contact/import_contacts.png)
 
 **To import contacts:**
 
@@ -23,9 +23,9 @@ The contacts importation allows you to add an entire group to the platform using
 
 3. Download and edit the provided model (or you can choose your file) and send using the button "Choose a file";
 
-![](/img/contact/import_contact.png)
+![](/img/contact/import_contacts.png)
 
-4. Confirm all personalized fields presents on your importation spreadsheet and choose the type of the field: Text, Number, Date/Time. Certify to verify the box(s) correspondents to the field that you want to import.
+4. Confirm all custom fields presents on your importation spreadsheet and choose the type of the field: Text, Number, Date/Time. Certify to verify the box(s) correspondents to the field that you want to import.
 
 **Importing types of addresses:**
 
@@ -33,4 +33,4 @@ The contacts can be imported with different addresses, but just one address for 
 
 - The contacts addresses can be added through an importation if the UUID column contains contacts UUID(s). The UUIDs can be obtained through a contacts exportation or using a contacts list on the API Explorator:
 
-- Exported contacts contained the UUIDs for their contacts, names, addresses and personalized fields. To exports, your contacts, go to Contacts guide, go to configure menu icon and select "Export".
+- Exported contacts contained the UUIDs for their contacts, names, addresses and custom fields. To exports, your contacts, go to Contacts guide, go to configure menu icon and select "Export".
